Fix: Dark mode issues across the app (#8744)
* fixes: dark mode issues accros the app

* fix: username visibility on dark mode

* dark mode from grup duplication

---------

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -8692,6 +8692,7 @@ tbody {
   p {
     font-weight: 500 !important;
     margin-left: 5px;
+    color: var(--slate11);
   }
 
   span {
@@ -8703,6 +8704,7 @@ tbody {
 .workspace-user-status {
   margin-right: 22px;
   margin-left: 5px;
+  color: var(--slate12);
 }
 
 .worskpace-setting-table-gap {
@@ -9550,6 +9552,13 @@ tbody {
           background-color: var(--slate3);
         }
 
+        input {
+          color: var(--slate11);
+          &:focus {
+            background: unset !important
+          }
+        }
+
         .item-renderer {
           align-items: center;
 
@@ -9572,6 +9581,11 @@ tbody {
   .rmsc .dropdown-container:focus-within {
     border: 1px solid var(--indigo9) !important;
     box-shadow: 0px 0px 0px 2px #C6D4F9 !important;
+  }
+
+  input {
+    color: var(--slate12);
+    background-color: unset !important;
   }
 
   .dropdown-heading-value {
@@ -12170,6 +12184,7 @@ tbody {
     padding: 5px 8px;
     border-radius: 6px;
     background-color: var(--slate3);
+    color: var(--slate11);
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
